--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.wrapper {
+  padding-top: 5px;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 57px ;
+  background: #C4C4C4;
+  width: 600px;
+  height: 600px;
+}
+
